--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "http": "0.0.1-security",
+    "nodemon": "^2.0.7",
+    "socket-io": "^1.0.0",
+    "socket.io": "^3.1.2",
+    "uuid": "^8.3.2",
+    "uws": "^200.0.0",
+    "websocket": "^1.0.33",
+    "ws": "^7.4.5"
   }
 }
